--- a/chrome_ext/manifest.json
+++ b/chrome_ext/manifest.json
@@ -8,6 +8,7 @@
         "persistent": true
       },
     "browser_action": {
+    "default_popup": "handmodule/dist/index.html",
     "default_icon": {
         "128": "images/hand_terminal128.png"
     }
