--- a/chrome_ext/manifest.json
+++ b/chrome_ext/manifest.json
@@ -5,10 +5,10 @@
     "permissions": ["activeTab","declarativeContent", "storage"],
     "background": {
         "page": "handmodule/dist/index.html",
-        "persistent": true
+        "persistent": false
       },
     "browser_action": {
-    "default_popup": "handmodule/dist/index.html",
+    "default_popup": "handmodule/dist/index_ui.html",
     "default_icon": {
         "128": "images/hand_terminal128.png"
     }
